(FEATURE) - 4-framework-entitysystem (#12)
* (FEATURE) - 3-framework-sceneloader

https://trello.com/c/gASazn1K/66-developers-sceneloader

The sceneloader can now load switch and dispatch scene's.

* (FEATURE) - 3-framework-sceneloader

https://trello.com/c/gASazn1K/66-developers-sceneloader

The sceneloader can now load switch and dispatch scene's.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Sports world: Ball pit</title>
         <meta name="viewport" content="width=device-width">
 
+        <script src="plugins/phaser.js"></script>
+
         <script src="advancedgames.framework/src/math/vector2.js"></script>
 
         <script src="advancedgames.framework/src/systems/eventlistener/listener.js"></script>
@@ -13,18 +15,20 @@
         <script src="advancedgames.framework/src/systems/inputsystem/inputtypes.js"></script>
         <script src="advancedgames.framework/src/systems/inputsystem/inputsystem.js"></script>
 
+        <script src="advancedgames.framework/src/entities/entity.js"></script>
+        <script src="advancedgames.framework/src/displays/display.js"></script>
+        <script src="advancedgames.framework/src/systems/rendering/viewcontainer.js"></script>
+
         <script src="advancedgames.framework/core.js"></script>
 
         <script src="advancedgames.ballpit.settings/global.js"></script>
         <script src="advancedgames.ballpit.settings/configuration/config.js"></script>
 
-        <script src="advancedgames.ballpit.game/src/scenes/alex.scenes/gridscene.js"></script>
+        <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/entityscene.js"></script>
         <script src="advancedgames.ballpit.game/ballpit.js"></script>
-
-        <script src="plugins/phaser.js"></script>
     </head>
 
     <body>
         <script src="advancedgames.ballpit.game/main.js"></script>
     </body>
-</html> 
+</html>
