No issue. This commit is to finalize the framework. This commit contains debug settings and a levelloader. It connects the classes we made together so we can finally start on the game!

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
         <script src="advancedgames.framework/src/math/vector2.js"></script>
 
+        <script src="advancedgames.framework/src/debugging/debug.js"></script>
+
         <script src="advancedgames.framework/src/systems/eventlistener/listener.js"></script>
         <script src="advancedgames.framework/src/systems/loadersystem/preloader.js"></script>
         <script src="advancedgames.framework/src/systems/loadersystem/sceneloader.js"></script>
@@ -24,8 +26,17 @@
         <script src="advancedgames.ballpit.settings/global.js"></script>
         <script src="advancedgames.ballpit.settings/configuration/config.js"></script>
 
+        <script src="advancedgames.ballpit.game/src/scenes/alex.scenes/gridscene.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/entityscene.js"></script>
-        <script src="advancedgames.ballpit.game/ballpit.js"></script>
+
+        <script src="advancedgames.ballpit.game/src/scenes/game.js"></script>
+        <script src="advancedgames.ballpit.game/src/scenes/preloader.js"></script>
+
+        <script src="advancedgames.ballpit.game/src/levelloader.js"></script>
+        <script src="advancedgames.ballpit.game/src/ballpit.js"></script>
+
+        <script src="advancedgames.ballpit.settings/debugging/debugsettings.js"></script>
+        <script src="advancedgames.ballpit.settings/debugging/debugcommands.js"></script>
     </head>
 
     <body>
