(FEATURE)- 7-game-balls
https://github.com/kevinboogaard/Sports_World-Ball_Pit/issues/15

the ballcontainer and the factory workt on and finished.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <script src="advancedgames.ballpit.game/src/levelloader.js"></script>
         <script src="advancedgames.ballpit.game/src/ballpit.js"></script>
 
+        <script src="advancedgames.ballpit.game/src/containers/ballcontainer.js"></script>        
+
+        <script src="advancedgames.ballpit.game/src/factories/entityfactory.js"></script>        
+
         <script src="advancedgames.ballpit.settings/debugging/debugsettings.js"></script>
         <script src="advancedgames.ballpit.settings/debugging/debugcommands.js"></script>
     </head>
