--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <script src="advancedgames.framework/src/entities/entity.js"></script>
         <script src="advancedgames.framework/src/displays/display.js"></script>
 
+        <script src="advancedgames.framework/src/interface/interface.js"></script>
+        <script src="advancedgames.framework/src/interface/button.js"></script>
+        <script src="advancedgames.framework/src/interface/text.js"></script>
+        
+
         <script src="advancedgames.framework/core.js"></script>
 
         <script src="advancedgames.ballpit.settings/global.js"></script>
@@ -37,6 +42,7 @@
 
         <script src="advancedgames.ballpit.game/src/scenes/alex.scenes/gridscene.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/entityscene.js"></script>
+        <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/uiscene.js"></script>
 
         <script src="advancedgames.ballpit.game/src/scenes/game.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/preloader.js"></script>
