(FEATURE) - 10-game-user-interface-menu (#24)
* (FEATURE)-10-game-user-interface-menu

10-game-user-interface-menu

the interface with text and buttons

* 10-game-user-interface-menu

https://github.com/kevinboogaard/Sports_World-Ball_Pit/issues/23

game transition, art input, some changes

* FEATURE - 10-game-user-interface-menu

https://github.com/kevinboogaard/Sports_World-Ball_Pit/issues/23

map strucure, begin animations, spritesheets loader.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
         <script src="advancedgames.framework/src/systems/tilesystem/tiled/imagelayer.js"></script>
         <script src="advancedgames.framework/src/systems/tilesystem/tiled/objectlayer.js"></script>
 
+        <script src="advancedgames.framework/src/interface/interface.js"></script>
+        <script src="advancedgames.framework/src/interface/button.js"></script>
+        <script src="advancedgames.framework/src/interface/text.js"></script>
+
         <script src="advancedgames.framework/src/entities/entity.js"></script>
         <script src="advancedgames.framework/src/entities/tilemodel.js"></script>
         <script src="advancedgames.framework/src/displays/display.js"></script>
+
         <script src="advancedgames.framework/src/displays/tileview.js"></script>
 
         <script src="advancedgames.framework/core.js"></script>
@@ -45,6 +50,8 @@
 
         <script src="advancedgames.ballpit.game/src/scenes/alex.scenes/gridscene.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/entityscene.js"></script>
+        <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/uiscene.js"></script>
+        <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/spritesheetscene.js"></script>
 
         <script src="advancedgames.ballpit.game/src/scenes/game.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/preloader.js"></script>
