--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <script src="advancedgames.framework/src/factories/entityfactory.js"></script>
 
         <script src="advancedgames.framework/src/systems/loadersystem/preloader.js"></script>
-        <script src="advancedgames.framework/src/systems/loadersystem/sceneloader.js"></script >
+        <script src="advancedgames.framework/src/systems/loadersystem/sceneloader.js"></script>
         
         <script src="advancedgames.framework/src/systems/inputsystem/inputtypes.js"></script>
         <script src="advancedgames.framework/src/systems/inputsystem/inputsystem.js"></script>
@@ -47,16 +47,15 @@
 
         <script src="advancedgames.ballpit.settings/global.js"></script>
         <script src="advancedgames.ballpit.settings/configuration/config.js"></script>
+        <script src="advancedgames.ballpit.settings/configuration/settings.js"></script>
 
         <script src="advancedgames.ballpit.game/src/scenes/alex.scenes/gridscene.js"></script>
-        <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/entityscene.js"></script>
-        <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/uiscene.js"></script>
-        <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/spritesheetscene.js"></script>
 
         <script src="advancedgames.ballpit.game/src/scenes/game.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/preloader.js"></script>
 
         <script src="advancedgames.ballpit.game/src/entities/models/ballmodel.js"></script>
+        <script src="advancedgames.ballpit.game/src/entities/views/ballview.js"></script>
 
         <script src="advancedgames.ballpit.game/src/levelloader.js"></script>
         <script src="advancedgames.ballpit.game/src/ballpit.js"></script>
@@ -64,7 +63,6 @@
         <script src="advancedgames.ballpit.game/src/containers/ballcontainer.js"></script>  
         <script src="advancedgames.ballpit.game/src/controllers/ballcontroller.js"></script>     
         <script src="advancedgames.ballpit.game/src/helpers/ballhelper.js"></script>        
-
 
         <script src="advancedgames.ballpit.game/src/factories/entityfactory.js"></script>        
 
