--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <script src="advancedgames.ballpit.settings/configuration/settings.js"></script>
 
         <script src="advancedgames.ballpit.game/src/scenes/alex.scenes/gridscene.js"></script>
+        <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/uiscene.js"></script>
+
 
         <script src="advancedgames.ballpit.game/src/scenes/game.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/preloader.js"></script>
