(PROTOTYPE) 11-game-ball-prototype
No Issue.
Added the MainMenu scene and connected it to eachother making it a fully functional prototype. Ready to pull request.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <script src="advancedgames.ballpit.game/src/scenes/alex.scenes/gridscene.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/uiscene.js"></script>
 
-
+        <script src="advancedgames.ballpit.game/src/scenes/mainmenu.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/game.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/preloader.js"></script>
 
