--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
         <script src="advancedgames.ballpit.game/src/scenes/alex.scenes/gridscene.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/uiscene.js"></script>
+        <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/tutorialscene.js"></script>
 
         <script src="advancedgames.ballpit.game/src/scenes/mainmenu.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/game.js"></script>
