(ENHANCEMENT) - 11-game-ball-prototype
No Issue.
Made some enhancements to the prototype.

--- a/advancedgames.ballpit.game/bin/index.html
+++ b/advancedgames.ballpit.game/bin/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <title>Sports world: Ball pit</title>
         <meta name="viewport" content="width=device-width">
+
+        <link rel="stylesheet" href="css/fonts.css"></link>
+		
         <script src="src/adcore.min.js"></script>
         <script src="src/ballpit.min.js"></script>
     </head>
