--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Sports world: Ball pit</title>
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="advancedgames.ballpit.game/css/fonts.css"></link>
+        <link rel="stylesheet" href="advancedgames.ballpit.game/css/fonts.css"/>
 
         <script src="plugins/phaser.js"></script>
         <script src="advancedgames.framework/src/utilities/utilities.js"></script>
@@ -76,7 +76,7 @@
         <script src="advancedgames.ballpit.settings/debugging/debugcommands.js"></script>
     </head>
 
-    <body>
+    <body style="margin: 0;">
         <script src="advancedgames.ballpit.game/main.js"></script>
     </body>
 </html>
