(FEATURE) - 19-game-score-view
https://github.com/kevinboogaard/Sports_World-Ball_Pit/issues/41

score view in the game also update score with a debug

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 
         <script src="advancedgames.framework/src/displays/tileview.js"></script>
 
+        <script src="advancedgames.ballpit.game/src/holders/scoreholder.js"></script>
+
+        <script src="advancedgames.ballpit.game/src/interfaces/scoreview.js"></script>
+
+
         <script src="advancedgames.framework/core.js"></script>
 
         <script src="advancedgames.ballpit.settings/global.js"></script>
