--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
         <script src="advancedgames.ballpit.game/src/scenes/alex.scenes/gridscene.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/uiscene.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/tutorialscene.js"></script>
+        <script src="advancedgames.ballpit.game/src/scenes/kevin.scenes/coachscene.js"></script>
 
         <script src="advancedgames.ballpit.game/src/scenes/mainmenu.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/game.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/preloader.js"></script>
 
         <script src="advancedgames.ballpit.game/src/entities/models/ballmodel.js"></script>
+        <script src="advancedgames.ballpit.game/src/entities/models/coachmodel.js"></script>
         <script src="advancedgames.ballpit.game/src/entities/views/ballview.js"></script>
 
         <script src="advancedgames.ballpit.game/src/levelloader.js"></script>
