(FEATURE) 29-game-time
https://github.com/kevinboogaard/Sports_World-Ball_Pit/issues/57
Made a game time class and changed some utilities.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>Sports world: Ball pit</title>
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="advancedgames.ballpit.game/css/fonts.css"/>
-
         <script src="plugins/phaser.js"></script>
+        <script src="plugins/webfont.js"></script>
+
         <script src="advancedgames.framework/src/utilities/utilities.js"></script>
         <script src="advancedgames.framework/src/utilities/rephraser.js"></script>
 
@@ -69,6 +69,9 @@
         <script src="advancedgames.ballpit.game/src/entities/models/coachmodel.js"></script>
         <script src="advancedgames.ballpit.game/src/entities/views/ballview.js"></script>
         <script src="advancedgames.ballpit.game/src/entities/views/coachview.js"></script>
+        
+        <script src="advancedgames.ballpit.game/src/interface/interfacelayer.js"></script>
+        <script src="advancedgames.ballpit.game/src/interface/timer/watch.js"></script>
 
         <script src="advancedgames.ballpit.game/src/levelloader.js"></script>
         <script src="advancedgames.ballpit.game/src/ballpit.js"></script>
@@ -82,9 +85,12 @@
 
         <script src="advancedgames.ballpit.settings/debugging/debugsettings.js"></script>
         <script src="advancedgames.ballpit.settings/debugging/debugcommands.js"></script>
+        
+        <script src="advancedgames.ballpit.game/fonts/fonts.js"></script>
     </head>
 
     <body style="margin: 0;">
+
         <script src="advancedgames.ballpit.game/main.js"></script>
     </body>
 </html>
