(FEATURE) 24-game-task-handler
https://github.com/kevinboogaard/Sports_World-Ball_Pit/issues/46
Added the coach view and made some changes.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <script src="advancedgames.ballpit.game/src/interface/interfacelayer.js"></script>
         <script src="advancedgames.ballpit.game/src/interface/timer/watch.js"></script>
         <script src="advancedgames.ballpit.game/src/interface/score/scoreboard.js"></script>
+        <script src="advancedgames.ballpit.game/src/interface/tasks/taskboard.js"></script>
 
         <script src="advancedgames.ballpit.game/src/levelloader.js"></script>
         <script src="advancedgames.ballpit.game/src/ballpit.js"></script>
