(FEATURE) 30-game-prototype
https://github.com/kevinboogaard/Sports_World-Ball_Pit/issues/59
Made a lot of changes and features.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <script src="advancedgames.ballpit.game/src/scenes/mainmenu.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/game.js"></script>
         <script src="advancedgames.ballpit.game/src/scenes/preloader.js"></script>
+        <script src="advancedgames.ballpit.game/src/scenes/tutorial.js"></script>
 
         <script src="advancedgames.ballpit.game/src/entities/models/ballmodel.js"></script>
         <script src="advancedgames.ballpit.game/src/entities/models/coachmodel.js"></script>
@@ -73,6 +74,7 @@
         <script src="advancedgames.ballpit.game/src/entities/views/coachview.js"></script>
         
         <script src="advancedgames.ballpit.game/src/interface/interfacelayer.js"></script>
+        <script src="advancedgames.ballpit.game/src/interface/speech.js"></script>
         <script src="advancedgames.ballpit.game/src/interface/timer/watch.js"></script>
         <script src="advancedgames.ballpit.game/src/interface/score/scoreboard.js"></script>
         <script src="advancedgames.ballpit.game/src/interface/tasks/taskboard.js"></script>
