(FEATURE) 30-game-prototype
https://github.com/kevinboogaard/Sports_World-Ball_Pit/issues/59
Merging soundsystem in progress.

--- a/game.html
+++ b/game.html
@@ -39,6 +39,8 @@
 
         <script src="advancedgames.framework/src/systems/rendering/viewcontainer.js"></script>
 
+        <script src="advancedgames.framework/src/systems/soundsystem/soundsystem.js"></script>
+
         <script src="advancedgames.framework/src/systems/tilesystem/tilemap.js"></script>
         <script src="advancedgames.framework/src/systems/tilesystem/tiled/tileset.js"></script>
         <script src="advancedgames.framework/src/systems/tilesystem/tiled/tilelayer.js"></script>
