--- a/game.html
+++ b/game.html
@@ -9,6 +9,11 @@
             body {
                 margin: 0;
             }
+
+            canvas {
+                width: 100%;
+                height: 100%;
+            }
         </style>
         
         <script src="plugins/phaser.js"></script>
