--- a/game.html
+++ b/game.html
@@ -38,6 +38,7 @@
 
         <script src="advancedgames.framework/src/systems/loadersystem/preloader.js"></script>
         <script src="advancedgames.framework/src/systems/loadersystem/sceneloader.js"></script>
+        <script src="advancedgames.framework/src/systems/loadersystem/fontloader.js"></script>
         
         <script src="advancedgames.framework/src/systems/inputsystem/inputtypes.js"></script>
         <script src="advancedgames.framework/src/systems/inputsystem/inputsystem.js"></script>
@@ -103,8 +104,6 @@
 
         <script src="advancedgames.ballpit.settings/debugging/debugsettings.js"></script>
         <script src="advancedgames.ballpit.settings/debugging/debugcommands.js"></script>
-        
-        <script src="advancedgames.ballpit.game/fonts/fonts.js"></script>
     </head>
 
     <body>
